# channel-flow-cylinder

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md
.claude/: .nfsec6e356a91ebc8a10001570b
build_dealii/: dg_channel_flow
meshes/: channel.geo  generate_mesh.py
notes/: benchmark_targets.md  conversation_log.md  solver_notes.md  solver_parameters.md
scripts/: render_movie.py  run_simulation.py
src/: CMakeLists.txt  channel_flow_assembly.cpp  channel_flow_system.cpp  channel_flow_system.h  dg_face_assembly.cpp  drag_lift.cpp  drag_lift.h  main.cpp  params.h  petsc_utils.h
src/dealii/: CMakeLists.txt  amg_preconditioner.h  dg_assembly.cc  dg_navier_stokes.cc  dg_navier_stokes.h  dg_params.h  dg_schur_solver.cc  main.cc
tests/: CMakeLists.txt  test_dg_spaces.cpp  test_dg_stokes.cpp  test_driver.py  test_mesh.py  test_output.cpp  test_spaces.cpp  test_stokes.cpp  test_timestep.cpp  test_validation.py
